# src/controllers/wallet.ts
@@ -2,7 +2,7 @@ import { NextFunction, Request, Response } from "express";
 
 // Models
 import { BalanceResponse } from "../models/wallet";
-import { getNetwork } from "../models/network";
+import { getChain } from "../models/chain";
 
 // Services
 import contractProvider from "../services/contractProvider";
@@ -35,9 +35,9 @@ const getCurrentBalance = async (
   */
   try {
     const address = req.params.address;
-    const network = getNetwork(req.query.network as string);
+    const blockchain = getChain(req.query.blockchain as string);
 
-    const provider = contractProvider.getInstance(network);
+    const provider = contractProvider.getInstance(blockchain);
     const balance: bigint = await provider.getBalance(address);
     returnBalance(res, address, balance);
   } catch (error) {
@@ -72,9 +72,9 @@ const getBalanceAtBlock = async (
   try {
     const address = req.params.address;
     const blockNumber = parseInt(req.params.blockNumber);
-    const network = getNetwork(req.query.network as string);
+    const blockchain = getChain(req.query.blockchain as string);
 
-    const provider = contractProvider.getInstance(network)
+    const provider = contractProvider.getInstance(blockchain)
     const balance: bigint = await provider.getBalance(address, blockNumber);
     returnBalance(res, address, balance);
   } catch (error) {
@@ -109,9 +109,9 @@ const getBalanceAtDate = async (
   try {
     const address = req.params.address;
     const date = new Date(req.params.date);
-    const network = getNetwork(req.query.network as string);
+    const blockchain = getChain(req.query.blockchain as string);
 
-    const provider = contractProvider.getInstance(network)
+    const provider = contractProvider.getInstance(blockchain)
     const dater = daterProvider.getDater(provider)
 
     const block: EthDater.BlockResult = await dater.getDate(date, true, false);
